@@ -91,13 +91,13 @@ struct	directory_entry {
 /* Return the namlen from a struct direct, paying attention to whether
    this filesystem supports the type extension */
 #if (BYTE_ORDER == LITTLE_ENDIAN)
-#define DIRECT_NAMLEN(dp) (direct_symlink_extension || swab_disk	    \
-			   ? (dp)->d_namlen 				    \
-			   : (dp)->d_type)
+#define DIRECT_NAMLEN(dp) (*(direct_symlink_extension || swab_disk	    \
+			     ? &(dp)->d_namlen 				    \
+			     : &(dp)->d_type))
 #else
-#define DIRECT_NAMLEN(dp) (!direct_symlink_extension && swab_disk	    \
-			   ? (dp)->d_type				    \
-			   : (dp)->d_namlen)
+#define DIRECT_NAMLEN(dp) (*(!direct_symlink_extension && swab_disk	    \
+			     ? &(dp)->d_type				    \
+			     : &(dp)->d_namlen))
 #endif
 
 /*
