@@ -1,3 +1,7 @@
+2006-03-15  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* dir.h (DIRECT_NAMELEN): Don't use ?: as a lvalue.
+
 2002-10-03  Roland McGrath  <roland@frob.com>
 
 	* dir.h (MAXNAMLEN): #undef before defining.
